<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <include layout="@layout/toolbar_layout" />

    <!-- 翻译源 ui -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/mLayoutSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shadow"
        android:padding="20dp">


        <TextView
            android:id="@+id/mTvSourceLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_btn_gray_10_radius"
            android:drawableLeft="@drawable/chinese_icon"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/chinese_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/mImgDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/delete"
            android:visibility="invisible"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mTvSourceLanguage" />

        <EditText
            android:id="@+id/mEtSource"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@null"

            android:gravity="top|left"
            android:hint="@string/input_translation_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/mImgDel"
            app:layout_constraintTop_toBottomOf="@id/mTvSourceLanguage" />


        <TextView
            android:id="@+id/mTvTranslationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_blue_5_radius"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="3dp"
            android:text="@string/translation_txt"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mEtSource" />

    </android.support.constraint.ConstraintLayout>


    <ImageView
        android:id="@+id/mImgTrans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/trans_icon_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mLayoutSource" />


    <!-- 翻译结果 ui -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shadow"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/mImgTrans">

        <TextView
            android:id="@+id/mTvResultLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_btn_gray_10_radius"
            android:drawableLeft="@drawable/english_icon"
            android:drawablePadding="3dp"
            android:padding="5dp"
            android:text="@string/english_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/mTvResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:gravity="top|left"
            android:minHeight="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mTvResultLanguage" />


    </android.support.constraint.ConstraintLayout>


</LinearLayout>