<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/toolbar_layout" />

    <!-- 翻译源 ui -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/mLayoutSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shadow"
        android:padding="20dp">

        <TextView
            android:id="@+id/mTvChineseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_btn_gray_10_radius"
            android:drawableLeft="@drawable/chinese_icon"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/chinese_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/mEtChinese"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:gravity="top|left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mTvChineseTitle" />


    </android.support.constraint.ConstraintLayout>


    <!-- 翻译结果 ui -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shadow"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/mImgTrans">

        <TextView
            android:id="@+id/mTvEnglishTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_btn_gray_10_radius"
            android:drawableLeft="@drawable/english_icon"
            android:drawablePadding="3dp"
            android:padding="5dp"
            android:text="@string/english_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/mEtEnglish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:gravity="top|left"
            android:minHeight="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mTvEnglishTitle" />


    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/mTvSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_blue_5_radius"
        android:paddingBottom="8dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="8dp"
        android:text="@string/save_btn"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/mEtSource" />


</LinearLayout>